--- a/R-set-operations.Rmd
+++ b/R-set-operations.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Set Graphics
 
-```{r 1, fig.width=6, fig.height=4, warning = FALSE}
+```{r, fig.width=6, fig.height=4, warning = FALSE}
 library(ggplot2)
 library(ggforce)
 library(ggrepel)
@@ -33,11 +33,46 @@ ggplot() +
                   box.padding=unit(0.4, 'lines')) +
   theme_void()
 ```
-```{r 2, fig.width=6, fig.height=4, warning = FALSE}
+```{r, fig.width=6, fig.height=4, warning = FALSE}
 library(ggplot2)
 library(ggforce)
 library(ggrepel)
 options(ggrepel.max.overlaps = Inf)
+
+# library(Cairo)
+# CairoWin()
+
+a <- list(1, 2, 3, 4, 5)
+b <- list(6, 7, 8, 9, 10)
+
+w <- 120
+h <- w * (2/3)
+ax <- w * (4/15)
+ay <- h/2
+bx <- w * (11/15)
+by <- h/2
+r <- w * (1/5)
+
+ggplot() +
+  geom_rect(aes(xmin=0, xmax=w, ymin=0, ymax=h), fill="white", color="black", size=1) +
+  geom_text(aes(x=w * (1/30), y=h * (19/20), label='Omega'), size=8, parse = TRUE) +
+  # A
+  geom_text(aes(x=w*(2/15), y=ay+r, label='A'), size=8) +
+  geom_circle(aes(x0 = ax, y0 = ay, r=r), size=1) +
+  geom_text_repel(aes(x=ax, y=ay, label=a), size=6, segment.alpha=0, force=1,
+                  box.padding=unit(0.4, 'lines'), nudge_x=0, nudge_y=0) +
+  # B
+  geom_text(aes(x=w*(3/5), y=by+r, label='B'), size=8) +
+  geom_circle(aes(x0 = bx, y0 = by, r=r), size=1) +
+  geom_text_repel(aes(x=bx, y=by, label=b), size=6, segment.alpha=0, force=1,
+                  box.padding=unit(0.4, 'lines')) +
+  theme_void()
+```
+
+```{r, fig.width=6, fig.height=4, warning = FALSE}
+library(ggplot2)
+library(ggforce)
+library(ggrepel)
 
 a <- list(1, 2, 3, 4, 5)
 b <- list(6, 7, 8, 9, 10)
@@ -49,13 +84,13 @@ ggplot() + theme_void() +
   geom_text(aes(x=4, y=16, label='A'), size=8) +
   geom_text_repel(aes(x=8, y=10, label=a), size=6, segment.alpha=0, force=1,
                   box.padding=unit(0.2, 'lines'), nudge_x=0, nudge_y=0) +
-  geom_circle(aes(x0 = 19, y0 = 10, r=7), size=1) +
+  geom_circle(aes(x0 = 19, y0 = 10, r=7), size=1, fill="grey50", alpha=0.3) +
   geom_text(aes(x=26, y=16, label='B'), size=8) +
   geom_text_repel(aes(x=22, y=10, label=b), size=6, segment.alpha=0, force=1,
                   box.padding=unit(0.2, 'lines'))
 ```
 
-```{r 3, fig.width=6, fig.height=6, warning = FALSE}
+```{r, fig.width=6, fig.height=6, warning = FALSE}
 library(ggplot2)
 library(ggforce)
 library(ggrepel)
@@ -76,5 +111,29 @@ ggplot() + theme_void() +
   geom_text_repel(aes(x=22, y=20, label=b), size=6, segment.alpha=0, force=1,
                   box.padding=unit(0.3, 'lines')) +
   geom_circle(aes(x0 = 15, y0 = 8, r=6), size=1) +
+  geom_text(aes(x=10, y=3, label='C'), size=8)
+```
+
+```{r, fig.width=6, fig.height=6, warning = FALSE}
+library(ggplot2)
+library(ggforce)
+library(ggrepel)
+options(ggrepel.max.overlaps = Inf)
+
+a <- list(1, 2, 3, 4, 5)
+b <- list(6, 7, 8, 9, 10)
+
+ggplot() + theme_void() +
+  geom_rect(aes(xmin=0, xmax=30, ymin=0, ymax=30), fill="white", color="black", size=1) +
+  geom_text(aes(x=1, y=29, label='Omega'), size=8, parse = TRUE) +
+  geom_circle(aes(x0 = 10, y0 = 18, r=7), size=1) +
+  geom_text(aes(x=4, y=24, label='A'), size=8) +
+  geom_text_repel(aes(x=8, y=20, label=a), size=6, segment.alpha=0, force=1,
+                  box.padding=unit(0.3, 'lines'), nudge_x=0, nudge_y=0) +
+  geom_circle(aes(x0 = 20, y0 = 18, r=7), size=1) +
+  geom_text(aes(x=26, y=24, label='B'), size=8) +
+  geom_text_repel(aes(x=22, y=20, label=b), size=6, segment.alpha=0, force=1,
+                  box.padding=unit(0.3, 'lines')) +
+  geom_circle(aes(x0 = 15, y0 = 10, r=7), size=1) +
   geom_text(aes(x=10, y=3, label='C'), size=8)
 ```
